--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </div>
   </div>
   <div class="col-lg-6 col-md-12 col-sm-12 text-center">
-    <img src="./img/diagram.jpg" style="width: 80%;" alt="">
+    <img src="./img/diagram.png" style="width: 100%;" alt="">
   </div>
 </div>
   
