--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>بەو زووانە - ژیر OCR</title>
+  <title>بەم زووانە - ژیر OCR</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,14 +29,8 @@
 
 <body>
 
-  <!-- <div class="overlay"></div> -->
-  <!-- <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-    <source src="mp4/bg.mp4" type="video/mp4">
-  </video> -->
-
-  
 <div class="row h-100  justify-content-center align-self-center">
-  <div class="col-lg-6 col-md-12 col-sm-12" style="box-shadow: -1px -19px 14px #333333;background: #333333;">
+  <div class="col-lg-6 col-md-12 col-sm-12" style="box-shadow: -1px -19px 14px #333333;background: #0078ff;">
     <div class="masthead" style="width: 103%;">
       <!-- <div class="masthead-bg"></div> -->
       <div class="container h-100">
